--- a/challenge3/webapp/shimizu/.gitignore
+++ b/challenge3/webapp/shimizu/.gitignore
@@ -13,6 +13,9 @@
 !/log/.keep
 !/tmp/.keep
 
+# Ignore uploaded files in development
+/storage/*
+!/storage/.keep
 
 /node_modules
 /yarn-error.log
@@ -20,5 +23,14 @@
 /public/assets
 .byebug_history
 
+/vendor/*
+!/vendor/assets
+
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
