--- a/challenge3/webapp/shimizu/Gemfile
+++ b/challenge3/webapp/shimizu/Gemfile
@@ -28,6 +28,9 @@ gem 'jbuilder', '~> 2.5'
 gem 'bootsnap', '>= 1.1.0', require: false
 
 gem 'rubocop-airbnb'
+gem 'gon'
+gem 'chartkick'
+gem 'activerecord-import'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
