--- a/challenge3/webapp/shimizu/Gemfile
+++ b/challenge3/webapp/shimizu/Gemfile
@@ -30,6 +30,7 @@ gem 'bootsnap', '>= 1.1.0', require: false
 gem 'rubocop-airbnb'
 gem 'chartkick'
 gem 'seed-fu'
+gem 'gon'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
