--- a/challenge3/webapp/shimizu/.rubocop.yml
+++ b/challenge3/webapp/shimizu/.rubocop.yml
@@ -19,6 +19,7 @@ AllCops:
     - 'db/migrate/*'
     - 'db/schema.rb'
     - 'db/seeds.rb'
+    - 'db/fixtures/*'
     - 'lib/tasks/*'
     - 'vendor/**/*'
     - 'path/ruby'
