--- a/challenge3/webapp/colinlee_chanllenge3/package.json
+++ b/challenge3/webapp/colinlee_chanllenge3/package.json
@@ -8,6 +8,7 @@
     "@rails/webpacker": "4.2.2",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
+    "axios": "^0.19.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-polyfill": "^6.26.0",
     "pnp-webpack-plugin": "^1.6.4",
