[tweak] refactor the codes and add rspecs

--- a/challenge3/webapp/colinlee_chanllenge3/.rubocop.yml
+++ b/challenge3/webapp/colinlee_chanllenge3/.rubocop.yml
@@ -131,3 +131,6 @@ Style/PercentLiteralDelimiters:
 
 Rails/HasAndBelongsToMany:
   Enabled: false
+
+Rails/UniqueValidationWithoutIndex:
+  Enabled: false
