--- a/challenge3/webapp/colinlee_chanllenge3/Gemfile
+++ b/challenge3/webapp/colinlee_chanllenge3/Gemfile
@@ -41,6 +41,11 @@ group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: %i[mri mingw x64_mingw]
   gem 'danger'
+  gem 'database_cleaner'
+  gem 'factory_bot'
+  gem 'factory_bot_rails'
+  gem 'ffaker'
+  gem 'rspec-rails', '4.0.0.beta4'
 end
 
 group :development do
@@ -54,13 +59,10 @@ group :development do
 end
 
 group :test do
-  gem 'factory_bot'
-  gem 'factory_bot_rails'
-  gem 'ffaker', require: false
-  gem 'rspec-rails', '4.0.0.beta4'
   gem 'rubocop'
   gem 'rubocop-performance'
   gem 'rubocop-rails'
+  gem 'shoulda-matchers', '~> 4.3'
 end
 
 group :development, :test do
