--- a/challenge3/webapp/kumaki/Gemfile
+++ b/challenge3/webapp/kumaki/Gemfile
@@ -38,6 +38,8 @@ gem 'slim-rails'
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: %i[mri mingw x64_mingw]
+  gem 'rspec-rails', '~> 3.8.0'
+  gem 'factory_bot_rails', '~> 4.10.0'
 end
 
 group :development do
