--- a/challenge3/webapp/kumaki/Gemfile
+++ b/challenge3/webapp/kumaki/Gemfile
@@ -40,6 +40,10 @@ group :development, :test do
   gem 'byebug', platforms: %i[mri mingw x64_mingw]
   gem 'rspec-rails', '~> 3.8.0'
   gem 'factory_bot_rails', '~> 4.10.0'
+  gem 'pry-byebug'
+  gem 'pry-rails'
+  gem 'pry-doc'
+  gem 'binding_of_caller'
 end
 
 group :development do
@@ -52,6 +56,7 @@ group :development do
   gem 'rubocop', require: false
   gem "rubocop-rails"
   gem 'rubocop-rspec'
+  gem 'better_errors'
 end
 
 
