--- a/challenge3/webapp/kumaki/Gemfile
+++ b/challenge3/webapp/kumaki/Gemfile
@@ -34,6 +34,8 @@ gem 'bootsnap', '>= 1.1.0', require: false
 
 gem 'annotate'
 gem 'slim-rails'
+gem 'bootstrap', '~> 4.1.1'
+gem 'jquery-rails'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
