--- a/challenge3/webapp/kumaki/Gemfile
+++ b/challenge3/webapp/kumaki/Gemfile
@@ -36,6 +36,7 @@ gem 'annotate'
 gem 'slim-rails'
 gem 'bootstrap', '~> 4.1.1'
 gem 'jquery-rails'
+gem 'kaminari'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
