--- a/challenge3/webapp/kumaki/Gemfile
+++ b/challenge3/webapp/kumaki/Gemfile
@@ -37,7 +37,7 @@ gem 'slim-rails'
 gem 'bootstrap', '~> 4.1.1'
 gem 'jquery-rails'
 gem 'kaminari'
-gem "chartkick"
+gem 'chartkick'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
