--- a/challenge3/webapp/goi/api/config/database.yml
+++ b/challenge3/webapp/goi/api/config/database.yml
@@ -19,14 +19,14 @@ default: &default
 
 development:
   <<: *default
-  # database: myapp_development
+  database: myapp_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  # database: myapp_test
+  database: myapp_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
