--- a/challenge3/webapp/goi/front/package.json
+++ b/challenge3/webapp/goi/front/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "moment": "^2.27.0",
     "react": "16.0.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
