put_in_container
## what
- コンテナ化

## why

--- a/challenge3/webapp/shotaimoto/config/database.yml
+++ b/challenge3/webapp/shotaimoto/config/database.yml
@@ -50,5 +50,6 @@ test:
 production:
   <<: *default
   database: challenge3_production
-  username: shotaimoto
-  password: <%= ENV['SHOTAIMOTO_DATABASE_PASSWORD'] %>
+  username: root
+  password:
+  socket: /tmp/mysql.sock
