--- a/challenge3/webapp/shotaimoto/config/cable.yml
+++ b/challenge3/webapp/shotaimoto/config/cable.yml
@@ -7,4 +7,4 @@ test:
 production:
   adapter: redis
   url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: shotaimoto_production
+  channel_prefix: challenge3_production
