--- a/challenge3/webapp/shotaimoto/package.json
+++ b/challenge3/webapp/shotaimoto/package.json
@@ -1,5 +1,8 @@
 {
   "name": "shotaimoto",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "chart.js": "^2.9.3",
+    "chartkick": "^3.2.1"
+  }
 }
