--- a/challengeA/shota_imoto/Gemfile
+++ b/challengeA/shota_imoto/Gemfile
@@ -63,3 +63,6 @@ end
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'haml-rails'
+
+# gem lock 本番
+# nokogiri (1.11.0.rc3)
