仮のグラフを表示

--- a/challenge3/webapp/ishizaka/package.json
+++ b/challenge3/webapp/ishizaka/package.json
@@ -6,8 +6,10 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "chart.js": "^2.9.4",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.12",
+    "vue-chartjs": "^3.5.1",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12",
     "vue-turbolinks": "^2.1.0"
