--- a/challenge3/webapp/Taishi_Ito/Gemfile
+++ b/challenge3/webapp/Taishi_Ito/Gemfile
@@ -57,3 +57,5 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 group :production do
   gem 'pg', '>= 0.18', '< 2.0'
 end
+
+ gem 'uglifier'
