--- a/challenge3/webapp/yuji_uchida/config/database.yml
+++ b/challenge3/webapp/yuji_uchida/config/database.yml
@@ -8,21 +8,21 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: 
+  username: root
   password: mysql
   host: 127.0.0.1
 
 development:
   <<: *default
-  database: enegy_data_dev
+  database: energy_data_dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: enegy_data_test
+  database: energy_data_test
 
 production:
   <<: *default
-  database: enegy_data
+  database: energy_data
