コーディングテスト反映

--- a/challengeA/shogo_hori/.rubocop.yml
+++ b/challengeA/shogo_hori/.rubocop.yml
@@ -22,6 +22,14 @@ Metrics/MethodLength:
     Exclude:
     - 'lib/simulator.rb'
 
+Metrics/CyclomaticComplexity:
+    Exclude:
+    - 'lib/simulator.rb'
+
+Metrics/PerceivedComplexity:
+    Exclude:
+    - 'lib/simulator.rb'
+
 Documentation:
   Enabled: false
 
