--- a/challengeA/yoshifumi_sawada/Gemfile
+++ b/challengeA/yoshifumi_sawada/Gemfile
@@ -6,3 +6,4 @@ git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
 
 # gem "rails"
 gem "rspec", ">= 3.0.0"
+gem 'pry', '~> 0.13.1'
