--- a/challengeA/kaito_miyazaki/Gemfile
+++ b/challengeA/kaito_miyazaki/Gemfile
@@ -5,4 +5,5 @@ source 'https://rubygems.org'
 git_source(:github) { |repo_name| "https://github.com/#{repo_name}" }
 
 # gem "rails"
+gem 'rspec'
 gem 'rubocop'
